--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EcoMind | Centro de Control</title>
     
+    <!-- Bootstrap 5 Dark -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- FontAwesome (Iconos) -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <!-- Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <!-- Socket.IO -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
 
     <style>
@@ -26,7 +30,7 @@
             min-height: 100vh;
         }
 
-        /* Efecto Cristal en las Tarjetas */
+        /* Efecto Cristal Oscuro */
         .glass-card {
             background: rgba(255, 255, 255, 0.05);
             backdrop-filter: blur(10px);
@@ -54,14 +58,14 @@
             letter-spacing: -1px;
         }
 
-        .unit { font-size: 1.2rem; opacity: 0.6; font-weight: 300; }
+        .unit { font-size: 1.2rem; color: #aaa; font-weight: 300; }
 
-        /* Colores específicos */
-        .text-temp { color: #ff6b6b; text-shadow: 0 0 10px rgba(255, 107, 107, 0.3); }
-        .text-hum { color: #4dabf7; text-shadow: 0 0 10px rgba(77, 171, 247, 0.3); }
-        .text-lux { color: #fcc419; text-shadow: 0 0 10px rgba(252, 196, 25, 0.3); }
+        /* Colores Neón Específicos */
+        .text-temp { color: #ff6b6b; text-shadow: 0 0 15px rgba(255, 107, 107, 0.4); }
+        .text-hum { color: #4dabf7; text-shadow: 0 0 15px rgba(77, 171, 247, 0.4); }
+        .text-lux { color: #fcc419; text-shadow: 0 0 15px rgba(252, 196, 25, 0.4); }
 
-        /* Status Dot Pulsating */
+        /* Status Dot */
         .status-badge {
             padding: 8px 15px;
             border-radius: 20px;
@@ -69,12 +73,9 @@
             display: flex;
             align-items: center;
             gap: 8px;
+            background: rgba(0,0,0,0.3);
         }
-        .dot {
-            height: 10px; width: 10px;
-            border-radius: 50%;
-            display: inline-block;
-        }
+        .dot { height: 10px; width: 10px; border-radius: 50%; display: inline-block; }
         .online-dot { background-color: var(--accent-green); box-shadow: 0 0 10px var(--accent-green); animation: pulse 2s infinite; }
         .offline-dot { background-color: #ff4444; }
 
@@ -88,6 +89,7 @@
 <body>
 
 <div class="container py-5">
+    <!-- Header -->
     <div class="d-flex justify-content-between align-items-center mb-5">
         <div>
             <h2 class="fw-bold mb-0"><i class="fas fa-leaf text-success me-2"></i>EcoMind <span class="fw-light">Dashboard</span></h2>
@@ -99,7 +101,9 @@
         </div>
     </div>
 
+    <!-- Tarjetas de Sensores -->
     <div class="row g-4 mb-4">
+        <!-- Temperatura -->
         <div class="col-md-4">
             <div class="glass-card p-4 text-center">
                 <i class="fas fa-thermometer-half sensor-icon text-temp"></i>
@@ -109,6 +113,7 @@
                 </div>
             </div>
         </div>
+        <!-- Humedad -->
         <div class="col-md-4">
             <div class="glass-card p-4 text-center">
                 <i class="fas fa-tint sensor-icon text-hum"></i>
@@ -118,10 +123,11 @@
                 </div>
             </div>
         </div>
+        <!-- Luz -->
         <div class="col-md-4">
             <div class="glass-card p-4 text-center">
                 <i class="fas fa-sun sensor-icon text-lux"></i>
-                <h5 class="text-muted">Luz Ambiental</h5>
+                <h5 class="text-muted">Luminosidad</h5>
                 <div class="sensor-value text-lux">
                     <span id="val_lux">--</span><span class="unit">lx</span>
                 </div>
@@ -129,6 +135,7 @@
         </div>
     </div>
 
+    <!-- Sección de Gráfica -->
     <div class="row">
         <div class="col-12">
             <div class="glass-card p-4">
@@ -145,19 +152,18 @@
 </div>
 
 <script>
-    const socket = io(); // Conexión automática
+    const socket = io();
     const ctx = document.getElementById('myChart').getContext('2d');
 
-    // --- CREACIÓN DE GRADIENTES PARA LA GRÁFICA ---
+    // --- GRADIENTES NEÓN ---
     let gradientTemp = ctx.createLinearGradient(0, 0, 0, 400);
-    gradientTemp.addColorStop(0, 'rgba(255, 107, 107, 0.5)'); // Rojo transparente arriba
-    gradientTemp.addColorStop(1, 'rgba(255, 107, 107, 0)');   // Transparente abajo
+    gradientTemp.addColorStop(0, 'rgba(255, 107, 107, 0.5)'); 
+    gradientTemp.addColorStop(1, 'rgba(255, 107, 107, 0)');
 
     let gradientHum = ctx.createLinearGradient(0, 0, 0, 400);
-    gradientHum.addColorStop(0, 'rgba(77, 171, 247, 0.5)');   // Azul transparente arriba
-    gradientHum.addColorStop(1, 'rgba(77, 171, 247, 0)');     // Transparente abajo
+    gradientHum.addColorStop(0, 'rgba(77, 171, 247, 0.5)');
+    gradientHum.addColorStop(1, 'rgba(77, 171, 247, 0)');
 
-    // --- CONFIGURACIÓN CHART.JS ---
     const chart = new Chart(ctx, {
         type: 'line',
         data: {
@@ -172,8 +178,9 @@
                     pointBackgroundColor: '#fff',
                     pointBorderColor: '#ff6b6b',
                     pointRadius: 4,
-                    fill: true, // Rellenar área bajo la curva
-                    tension: 0.4 // Curvas suaves
+                    fill: true,
+                    tension: 0.4,
+                    yAxisID: 'y'
                 },
                 {
                     label: 'Humedad (%)',
@@ -185,7 +192,19 @@
                     pointBorderColor: '#4dabf7',
                     pointRadius: 4,
                     fill: true,
-                    tension: 0.4
+                    tension: 0.4,
+                    yAxisID: 'y'
+                },
+                {
+                    label: 'Luz (Lx)',
+                    data: [],
+                    borderColor: '#fcc419',
+                    borderWidth: 2,
+                    borderDash: [5, 5], // Línea punteada para diferenciar
+                    pointRadius: 0, // Sin puntos para no ensuciar
+                    fill: false,
+                    tension: 0.4,
+                    yAxisID: 'y1' // Eje DERECHO
                 }
             ]
         },
@@ -193,19 +212,29 @@
             responsive: true,
             maintainAspectRatio: false,
             plugins: {
-                legend: { labels: { color: '#e0e0e0' } } // Texto leyenda blanco
+                legend: { labels: { color: '#e0e0e0' } } // Leyenda blanca
             },
             scales: {
                 x: { 
                     ticks: { color: '#aaaaaa' },
-                    grid: { display: false } // Ocultar cuadrícula vertical
+                    grid: { display: false }
                 },
                 y: { 
+                    type: 'linear',
+                    display: true,
+                    position: 'left',
                     ticks: { color: '#aaaaaa' },
-                    grid: { color: 'rgba(255,255,255,0.05)' } // Cuadrícula horizontal muy sutil
+                    grid: { color: 'rgba(255,255,255,0.05)' } // Rejilla muy sutil
+                },
+                y1: {
+                    type: 'linear',
+                    display: true,
+                    position: 'right',
+                    grid: { drawOnChartArea: false },
+                    ticks: { color: '#fcc419', callback: function(value) { return value + ' Lx'; } }
                 }
             },
-            animation: { duration: 0 } // Desactivar animación para fluidez en tiempo real
+            animation: { duration: 0 }
         }
     });
 
@@ -221,27 +250,29 @@
     });
 
     socket.on('nuevo_dato_sensor', (data) => {
-        // Actualizar números
+        // Actualizar tarjetas
         if (data.t) document.getElementById('val_temp').innerText = data.t;
         if (data.h) document.getElementById('val_hum').innerText = data.h;
         if (data.l) document.getElementById('val_lux').innerText = data.l;
 
-        // Hora actual
+        // Hora
         const now = new Date();
         const timeLabel = now.toLocaleTimeString();
         document.getElementById('lastUpdate').innerText = timeLabel;
 
         // Actualizar Gráfica
-        if (data.t && data.h) {
+        if (data.t !== undefined) {
             chart.data.labels.push(timeLabel);
             chart.data.datasets[0].data.push(data.t);
             chart.data.datasets[1].data.push(data.h);
+            chart.data.datasets[2].data.push(data.l);
 
-            // Mantener solo los últimos 15 puntos
-            if (chart.data.labels.length > 15) {
+            // Mantener últimos 20 puntos
+            if (chart.data.labels.length > 20) {
                 chart.data.labels.shift();
                 chart.data.datasets[0].data.shift();
                 chart.data.datasets[1].data.shift();
+                chart.data.datasets[2].data.shift();
             }
             chart.update();
         }
