--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <div class="d-flex justify-content-between align-items-center mb-5">
         <div>
             <h2 class="fw-bold mb-0"><i class="fas fa-leaf text-success me-2"></i>EcoMind <span class="fw-light">Dashboard</span></h2>
-            <p class="text-muted mb-0">Monitor de Invernadero Inteligente AWS</p>
+            <p class="text-light mb-0">Monitor de Invernadero Inteligente AWS</p>
         </div>
         <div class="glass-card status-badge">
             <span id="statusDot" class="dot offline-dot"></span>
